--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "glob": "^7.1.1",
     "mkdirp": "^0.5.1",
+    "prmzfy": "^0.1.0",
     "progress": "^1.1.8"
   },
   "devDependencies": {
