--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "dependencies": {
     "glob": "^7.1.1",
     "mkdirp": "^0.5.1",
-    "prmzfy": "^0.1.0",
+    "prmzfy": "^0.1.1",
     "progress": "^1.1.8"
   },
   "devDependencies": {
-    "eslint": "^3.10.2",
+    "eslint": "^3.11.1",
     "semistandard": "^9.1.0"
   },
   "bin": {
@@ -28,5 +28,8 @@
   "homepage": "https://github.com/iyegoroff/code-translator-cli#readme",
   "keywords": [
     "code-translator"
-  ]
+  ],
+  "scripts": {
+    "lint": "eslint code-translator-cli.js"
+  }
 }
